examples/test/testpolicy18285.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18285
  namespace: namespace261
spec:
  podSelector:
    matchLabels:
      key31: value1
      key45: value44
      key43: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value39
          key33: value6
          key13: value13
      podSelector:
        matchLabels:
          key43: value49
